cabal-version:      2.2
Category:           Biology
build-type:         Simple
name:               phylogenetic-component-graph
version:            0.1.0.1

author:             Ward Wheeler
maintainer:         wheeler@amnh.org
license:            BSD-3-Clause
license-file:       LICENSE

synopsis:           Program and library for general phylogenetic graph search

description:        Phylogenetic Componet Graph provides a library for
                    interacting with phylogenetic graphs. It defines a
                    decalartive scripting language for defining phylogenetic
                    searches. Said scripts can be evaluated by the provided pcg
                    program to perform a phylogenetic search on an input dataset.

extra-source-files:
    AUTHORS.md
    CHANGELOG.md
    FUNDING.md
    README.md
    
        
-- A litany of GHC warnings designed to alert us during the build of any common
-- pitfalls, future compatibility issues, or coding conventions.
common ghc-flags

  ghc-options:
    -- Optimization flags
    -O2
    -fexpose-all-unfoldings
    -foptimal-applicative-do
    -fspecialize-aggressively
    -- Usability flags
    -fdiagnostics-color=always
    -fhide-source-paths
    -j
    -- Sanity check warnings
    -Wall
    -Wcompat
    -Wdodgy-foreign-imports
    -Wduplicate-exports
    -Wempty-enumerations
    -Widentities
    -Wincomplete-patterns
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wmissing-fields
    -Wmissing-home-modules
    -Wmissing-monadfail-instances
    -Wmissing-signatures
    -Wnoncanonical-monadfail-instances
    -Wnoncanonical-monad-instances
    -Wnoncanonical-monoid-instances
    -Woverflowed-literals
    -Woverlapping-patterns
    -Wredundant-constraints
    -Wsemigroup
    -Wtabs
    -Wunrecognised-warning-flags
    -Wunused-binds
    -Wunused-do-bind
    -Wunused-foralls
    -Wunused-imports
    -Wunused-matches
    -Wwrong-do-bind


-- Global deviations from Haskell98
common language-specs

  default-language: Haskell2010

  -- Always use MonadFail(fail), not Monad(fail)
  other-extensions: MonadFailDesugaring


executable pcg

  import:
    ghc-flags,
    language-specs

  main-is:
    Main.hs

  ghc-options:
    -threaded -rtsopts

  hs-source-dirs:
    app/pcg

  build-depends:
    pcg-alphabet,
    pcg-evaluation,
    pcg-core,
    pcg-data-normalization,
    pcg-data-unification,            
    pcg-file-parsers,
    pcg-file-source,            
    pcg-language,
    pcg-utility,
    pcg-serialize,
    pcg-validation-transformer,
    ansi-wl-pprint           >= 0.6.8     && < 0.7,
    base                     >= 4.11      && < 5.0,
    bytestring               >= 0.10.8    && < 0.11,
    cassava                  >= 0.5       && < 0.6,
    compact                  >= 0.1       && < 2.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    deepseq                  >= 1.4       && < 2.0,
    filepath                 >= 1.4       && < 2.0,
    foldl                    >= 1.3.2     && < 2.0,
    gitrev                   >= 1.3       && < 2.0,
    -- >=2999.20 Required for forgiving construction of DOT object
    graphviz                 >= 2999.20   && < 3000,
    integer-gmp              >= 1.0       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    lens                     >= 4.17      && < 5.0,
    megaparsec               >= 7.0       && < 7.1,
    mmark                    >= 0.0.6     && < 1.0,
    modern-uri               >= 0.3       && < 1.0,
    mono-traversable         >= 1.0       && < 2.0,
    mtl                      >= 2.0       && < 3.0,
    optparse-applicative     >= 0.14      && < 0.15,
    parallel                 >= 3.2       && < 4.0,
    random-shuffle           >= 0.0.4     && < 0.1,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    semigroups               >= 0.18      && < 1.0,
    template-haskell         >= 2.13      && < 3.0,
    text                     >= 1.2       && < 2.0,
    text-short               >= 0.1       && < 1.0,
    text-show                >= 3.0       && < 4.0,
    transformers             >= 0.5.5     && < 1.0,
    validation               >= 1         && < 2.0,
    xml                      >= 1.3.14    && < 1.4,

  other-modules:
    Paths_phylogenetic_component_graph
    PCG.Command.Build.Evaluate
    PCG.Command.Echo.Evaluate
    PCG.Command.Load.Evaluate
    PCG.Command.Read.DecorationInitialization
    PCG.Command.Read.Evaluate
    PCG.Command.Read.InputStreams
--    PCG.Command.Read.InputStreamError
    PCG.Command.Read.ParseStreams
--    PCG.Command.Read.ParseStreamError
    PCG.Command.Read.ReadCommandError
    PCG.Command.Report.Evaluate
    PCG.Command.Report.GraphViz
    PCG.Command.Report.Metadata
    PCG.Command.Save.Evaluate
    PCG.CommandLineOptions
    PCG.CommandLineOptions.Display
    PCG.CommandLineOptions.Types
    PCG.Computation.Internal
    PCG.Software.Credits
    PCG.Software.Metadata            


executable 2d-do-comparison

  import:
    ghc-flags,
    language-specs

  main-is:
    2d-do-comparison.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-alphabet,
    pcg-core,
    pcg-tcm-memo,            
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 0.4,
    QuickCheck               >= 2.12      && < 3.0,


executable 3d-do-comparison

  import:
    ghc-flags,
    language-specs

  main-is:
    3d-do-comparison.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-alphabet,
    pcg-core,
    pcg-tcm-memo,            
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 0.4,
    deepseq                  >= 1.4       && < 2.0,
    QuickCheck               >= 2.12      && < 3.0,


executable affine-safety

  import:
    ghc-flags,
    language-specs

  main-is:
    affine-safety.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-alphabet,
    pcg-core,
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 0.4,
    QuickCheck               >= 2.12      && < 3.0,


executable fasta-differ

  import:
    ghc-flags,
    language-specs

  main-is:
    fasta-differ.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-file-parsers,
    base                     >= 4.11      && < 5.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    keys                     >= 3.0       && < 4.0,
    megaparsec               >= 7.0       && < 7.1,


executable generate-data-set

  import:
    ghc-flags,
    language-specs

  main-is:
    generate-data-set.hs

  hs-source-dirs:
    app

  build-depends:             
    ansi-wl-pprint           >= 0.6.8     && < 0.7,
    base                     >= 4.11      && < 5.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    integer-gmp              >= 1.0       && < 2.0,
    keys                     >= 3.0       && < 4.0,
    MemoTrie                 >= 0.6       && < 1.0,
    mtl                      >= 2.0       && < 3.0,
    optparse-applicative     >= 0.14      && < 0.15,
    random                   >= 1.0       && < 2.0,
    random-shuffle           >= 0.0.4     && < 0.1,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    transformers             >= 0.5.5     && < 1.0,
    validation               >= 1         && < 2.0,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,


executable generate-tcm

  import:
    ghc-flags,
    language-specs

  main-is:
    generate-tcm.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-utility,
    ansi-wl-pprint           >= 0.6.8     && < 0.7,
    base                     >= 4.11      && < 5.0,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    keys                     >= 3.0       && < 4.0,
    matrix                   >= 0.3.6     && < 0.4,
    optparse-applicative     >= 0.14      && < 0.15,
    -- >=0.12.0.2 required for compatability with "compact regions"
    vector                   >= 0.12.0.2  && < 0.13,


executable graphviz-examples

  import:
    ghc-flags,
    language-specs

  main-is:
    graphviz-examples.hs

  hs-source-dirs:
    app/graphviz-examples

  build-depends:
    base                     >= 4.11      && < 5.0,
    directory                >= 1.3.3     && < 1.4,
    filepath                 >= 1.4.2     && < 1.5,
    graphviz                 >= 2999.20   && < 3000,
    text                     >= 1.2.3     && < 1.3,


executable newick-resolver

  import:
    ghc-flags,
    language-specs

  main-is:
    newick-resolver.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-file-parsers,
    base                     >= 4.11      && < 5.0,
    megaparsec               >= 7.0       && < 7.1,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,


executable ukkonen-do-comparison

  import:
    ghc-flags,
    language-specs

  main-is:
    ukkonen-do-comparison.hs

  hs-source-dirs:
    app

  build-depends:
    pcg-alphabet,
    pcg-core,
    pcg-tcm-memo,
    base                     >= 4.11      && < 5.0,
    bimap                    >= 0.3       && < 0.4,
    QuickCheck               >= 2.12      && < 3.0,


test-suite integration-tests

  import:
    ghc-flags,
    language-specs

  main-is:
    IntegrationTests.hs

  type:
    exitcode-stdio-1.0

  ghc-options:
    -threaded -with-rtsopts=-N

  hs-source-dirs:
    test

  build-depends:
    pcg-core,
    pcg-utility,
    base                     >= 4.11      && < 5.0,
    binary                   >= 0.6       && < 1.0,
    bytestring               >= 0.10.8    && < 0.11,
    -- >=0.5.8 Required for Data.Map.restrictKeys
    containers               >= 0.5.8     && < 0.7,
    deepseq                  >= 1.4       && < 2.0,
    directory                >= 1.3       && < 2.0,
    filepath                 >= 1.4       && < 2.0,
    lens                     >= 4.17      && < 5.0,
    mtl                      >= 2.0       && < 3.0,
    process                  >= 1.6       && < 2.0,
    -- required for Data.Semigroup.Foldable.toNonEmpty
    semigroupoids            >= 5.2.1     && < 5.4,
    semigroups               >= 0.18      && < 1.0,
    tasty                    >= 1.2       && < 2.0,
    tasty-golden             >= 2.3       && < 3.0,
    tasty-hunit              >= 0.10      && < 1.0,
    tasty-rerun              >= 1.1.14    && < 2.0,
    transformers             >= 0.5.5     && < 1.0,

  other-modules:
    TestSuite.GoldenTests
    TestSuite.ScriptTests
    TestSuite.SubProcess
